Button text area fix for extra space

--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -7,7 +7,6 @@
     font-family: var(--FontRegular);
     text-transform: uppercase;
     letter-spacing: 5px;
-    //margin-bottom: 30px;
 }
 
 [data-widget="text"] {
@@ -73,6 +72,6 @@
     }
 
     .btn {
-        margin: 3rem 0;
+        //margin: 3rem 0;
     }
 }
